objects/Account.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Review_Frequency__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This indicates how often the product package review is required.</description>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Status__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It designates the status of the Account Review.</description>
        <inlineHelpText>Status of the Account Review</inlineHelpText>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated automatically. It stores the last selected risk grade template choice when creating a risk rating review. When creating risk rating reviews from the selection page, this field is used to automatically populate the risk grade template picklist.</description>
        <label>Risk Grade Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review_Date_Decisioned__c</fullName>
        <description>The latest decision date from the related Risk Rating Reviews</description>
        <label>Risk Rating Review Date Decisioned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review_Grade__c</fullName>
        <description>The system autopopulates this optional field to indicate the latest risk rating review grade. By default, it is blank.</description>
        <label>Risk Rating Review Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review_Status__c</fullName>
        <description>This field is optional. It is automatically populated with the approval or rejection status of the latest decisioned related risk rating review.</description>
        <label>Risk Rating Review Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SLAExpirationDate__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the expiration date for the SLA.</description>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SLASerialNumber__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Serial number for the SLA.</description>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SLA__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to select SLA level for this Relationship or Account, for example, Gold, Silver, or Bronze. The value provided must match one of the values in the SLA list established for this organization.</description>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Shipping_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the shipping address.</description>
        <label>Shipping Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State_of_Incorporation__c</fullName>
        <description>This is an optional field. This field will allow the user to select the state of incorporation. This field will be used to support the document preparation integrations.</description>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Statement_From_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used with Automated Financials System. It designates the beginning of the date range the BOT will request from the Relationship being serviced.</description>
        <inlineHelpText>The beginning of the date range in which the BOT will request from the relationship being serviced</inlineHelpText>
        <label>Statement From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Statement_To_Date__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used with Automated Financials System. It designates the ending of the date range the BOT will request from the Relationship being serviced.</description>
        <inlineHelpText>The end of the date range in which the BOT will request from the relationship being serviced</inlineHelpText>
        <label>Statement To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional. It is populated by a user. This field is a picklist used to specify the status of the account.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Identification_Number_PE__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Tax ID number for the account and is generally used with Business relationships. The field is only used when Platform Encryption is enabled.</description>
        <label>Tax Identification Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_Identification_Number__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the Tax ID number for the account and is generally used with Business relationships. The field should not be used if Platform Encryption is enabled.</description>
        <label>Tax Identification Number</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party__c</fullName>
        <description>Users populate this optional picklist on the relationship with the added entity&apos;s third party type, such as Attorney, Insurance Agency, Appraiser, Inspector, or Inactive. By default, this field is blank.</description>
        <inlineHelpText>Select the third party type of the added entity.</inlineHelpText>
        <label>Third Party Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Insurance Agency</fullName>
                </value>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Affiliated Exposure to this Relationship or Account.</description>
        <label>Total Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Direct_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on
            the configuration of Relationship Statistics. This field is used to report Total Direct Exposure to this Relationship.</description>
        <label>Total Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Indirect_Exposure__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Total Indirect Exposure to this Relationship.</description>
        <inlineHelpText>Total Indirect Exposure</inlineHelpText>
        <label>Total Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Net_New_Funds__c</fullName>
        <description>This field is optional. It is automatically populated with a value based on the configuration of Relationship Statistics. This field is used to report Total Net New Funds to this Relationship.</description>
        <inlineHelpText>Total Net New Funds</inlineHelpText>
        <label>Total Net New Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Participation_Amount__c</fullName>
        <description>This optional field automatically populates with the total participation amount for all syndications and participations involved with this relationship.</description>
        <label>Total Participation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Won_Opportunities__c</fullName>
        <description>This field is optional. It is automatically calculated via a rollup formula. This field is used to show the roll up summary of total opportunities associated to the relationship that were won.</description>
        <inlineHelpText>An example Rollup Summary field that adds all of the account&apos;s won opportunities.</inlineHelpText>
        <label>Total Won Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trust_Established_Date__c</fullName>
        <description>Trust Established Date</description>
        <inlineHelpText>The established date of the trust.</inlineHelpText>
        <label>Trust Established Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trust_Type__c</fullName>
        <description>Trust Type</description>
        <inlineHelpText>Select the trust type based on whether the trust grantor (creator) is the same or different from the trustee or if the grantor is deceased.</inlineHelpText>
        <label>Trust Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Declaration of trust (grantor and trustee same)</fullName>
                </value>
                <value>
                    <fullName>Trust under agreement (grantor and trustee different)</fullName>
                </value>
                <value>
                    <fullName>Testamentary trust (under will of deceased grantor)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__UpsellOpportunity__c</fullName>
        <description>This field is optional. It is populated by a user. This field is used to select Upsell Opportunity status for this Relationship or Account, for example, Yes, No, or Maybe. The value provided must match one of the values in the Upsell Opportunity list established for this organization.</description>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Valid_Resolution_Type__c</fullName>
        <description>Valid Resolution Type</description>
        <inlineHelpText>These are the options that indicate whether the financial institution possesses a valid and up-to-date resolution for the commercial account owner, or if a resolution needs to be included in the transaction workflow.</inlineHelpText>
        <label>Valid Resolution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No resolution on file or updating- complete now</fullName>
                </value>
                <value>
                    <fullName>Resolution on file- not needed</fullName>
                </value>
                <value>
                    <fullName>No resolution on file or updating- print to complete later</fullName>
                </value>
                <value>
                    <fullName>Customer providing- not needed</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom field utilized in the Cuso Sync by nCino Data.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Document_Manager_Identifier__c</fullName>
        <description>This field is optional. It should be set to populate automatically via workflow. This field is used internally to determine which Document Manager to load based on the Type of Account that is set. When left blank, the default document manager labeled &apos;Account&apos; is displayed.</description>
        <label>Document Manager Identifier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Special Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Secured_Exposure__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Total Secured Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cm_Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cm_Industry_Code_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Industry Code custom object.</description>
        <label>Industry Code</label>
        <referenceTo>cm_Industry_Code__c</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Industry_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Industry Code</label>
        <referenceTo>cm_Industry_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cm_Third_Party_Type_Text__c</fullName>
        <description>Used to convert the third party type (multi-select picklist) to text which then is concatenated with the Vendor name via a Process Builder. Add &quot;IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;[INSERT FI VENDOR TYPE]&quot; ), &quot;[INSERT FI VENDOR TYPE]&quot;,null ) &amp;&quot; at the end of the formula field if new picklist values are needed.</description>
        <formula>IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Appraiser&quot; ), &quot;Appraiser &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Attorney&quot; ), &quot;Attorney &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Demolition&quot; ), &quot;Demolition &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Demolition Contact&quot; ), &quot;Demolition Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Inactive&quot; ), &quot;Inactive &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Inspector&quot; ), &quot;Inspector &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Insurance Agency&quot; ), &quot;Insurance Agency &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Mortgage Broker&quot; ), &quot;Mortgage Broker &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Mortgage Broker Contact&quot; ), &quot;Mortgage Broker Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Buyer&quot; ), &quot;Real Estate Broker Buyer &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Buyer Contact&quot; ), &quot;Real Estate Broker Buyer Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Seller&quot; ), &quot;Real Estate Broker Seller &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Real Estate Broker Seller Contact&quot; ), &quot;Real Estate Broker Seller Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Settlement/Title Agent&quot; ), &quot;Settlement/Title Agent &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Settlement/Title Agent Contact&quot; ), &quot;Settlement/Title Agent Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Survey&quot; ), &quot;Survey &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Survey Contact&quot; ), &quot;Survey Contact &quot;,null ) &amp;
IF ( INCLUDES ( LLC_BI__Third_Party__c , &quot;Third Party Reports&quot; ), &quot;Third Party Reports &quot;,null )</formula>
        <label>Third Party Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCRED__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Relationships</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LLC_BI__MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Businesses</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>LLC_BI__Business</fullName>
        <active>true</active>
        <description>Select &quot;Business&quot; to add a Corporation, Partnership, or other business relationship type.</description>
        <label>Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Household</fullName>
        <active>true</active>
        <description>Select &quot;Household&quot; if you&apos;re adding a Household relationship type.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Individual</fullName>
        <active>true</active>
        <description>Select &quot;Individual&quot; to add an Individual relationship type.</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Lender</fullName>
        <active>true</active>
        <description>Select &quot;Lender&quot; if you are adding a Financial Institution or Institutional Investor relationship type.</description>
        <label>Lender</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Select &quot;Vendor&quot; if you are adding an attorney, appraiser, or other third party.</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Tax_Identification_Max_Length</fullName>
        <active>true</active>
        <errorConditionFormula>LEN( LLC_BI__Tax_Identification_Number__c ) &gt; 11</errorConditionFormula>
        <errorMessage>Tax Identification Number cannot exceed 11 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__To_date_cannot_be_before_from_d_ate</fullName>
        <active>true</active>
        <description>Validation ensures that the &quot;to&quot; date for the bot cannot be before the &quot;from&quot; date. If it is, the bot hangs.</description>
        <errorConditionFormula>LLC_BI__Statement_To_Date__c &lt; LLC_BI__Statement_From_Date__c</errorConditionFormula>
        <errorMessage>Statement To Date cannot be earlier than Statement from Date.</errorMessage>
    </validationRules>
</CustomObject>